; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/mfiutil/extr_mfi_volume.c_mfi_ld_get_props.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/mfiutil/extr_mfi_volume.c_mfi_ld_get_props.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mfi_ld_props = type { i32 }

@MFI_DCMD_LD_GET_PROP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, %struct.mfi_ld_props*)* @mfi_ld_get_props to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mfi_ld_get_props(i32 %0, i32 %1, %struct.mfi_ld_props* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.mfi_ld_props*, align 8
  %7 = alloca [1 x i32], align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store %struct.mfi_ld_props* %2, %struct.mfi_ld_props** %6, align 8
  %8 = load i32, i32* %5, align 4
  %9 = getelementptr inbounds [1 x i32], [1 x i32]* %7, i64 0, i64 0
  store i32 %8, i32* %9, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @MFI_DCMD_LD_GET_PROP, align 4
  %12 = load %struct.mfi_ld_props*, %struct.mfi_ld_props** %6, align 8
  %13 = getelementptr inbounds [1 x i32], [1 x i32]* %7, i64 0, i64 0
  %14 = call i32 @mfi_dcmd_command(i32 %10, i32 %11, %struct.mfi_ld_props* %12, i32 4, i32* %13, i32 1, i32* null)
  ret i32 %14
}

declare dso_local i32 @mfi_dcmd_command(i32, i32, %struct.mfi_ld_props*, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
